# serializer version: 1
# name: test_analytics_entities_snapshot[binary_sensor.dom_leak_suspected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dom_leak_suspected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Leak suspected',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOISTURE: 'moisture'>,
    'original_icon': None,
    'original_name': 'Leak suspected',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'leak_suspected',
    'unique_id': '7384243_20203_1120_leak_suspected',
    'unit_of_measurement': None,
  })
# ---
# name: test_analytics_entities_snapshot[binary_sensor.dom_leak_suspected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'consecutive_nights': 0,
      'device_class': 'moisture',
      'friendly_name': 'Dom Leak suspected',
      'implied_liters_per_day': None,
      'last_verdict_night': None,
      'masking_coverage': True,
      'persistent_flow': False,
      'rate_liters_per_hour': None,
      'tier': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dom_leak_suspected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_analytics_entities_snapshot[binary_sensor.dom_usage_anomaly-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dom_usage_anomaly',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Usage anomaly',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Usage anomaly',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'usage_anomaly',
    'unique_id': '7384243_20203_1120_usage_anomaly',
    'unit_of_measurement': None,
  })
# ---
# name: test_analytics_entities_snapshot[binary_sensor.dom_usage_anomaly-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'actual_liters': None,
      'day': None,
      'device_class': 'problem',
      'drift_alarm': False,
      'drift_cusum': False,
      'drift_ewma': False,
      'expected_liters': None,
      'friendly_name': 'Dom Usage anomaly',
      'point_hours': 0,
      'ratio': None,
      'ratio_bucket': None,
      'reasons': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dom_usage_anomaly',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_analytics_entities_snapshot[binary_sensor.dom_vacation_detected-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.dom_vacation_detected',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vacation detected',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:beach',
    'original_name': 'Vacation detected',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vacation_detected',
    'unique_id': '7384243_20203_1120_vacation_detected',
    'unit_of_measurement': None,
  })
# ---
# name: test_analytics_entities_snapshot[binary_sensor.dom_vacation_detected-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'consecutive_days': 0,
      'friendly_name': 'Dom Vacation detected',
      'icon': 'mdi:beach',
      'since': None,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.dom_vacation_detected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_analytics_entities_snapshot[sensor.dom_night_flow-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.dom_night_flow',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Night flow',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME_FLOW_RATE: 'volume_flow_rate'>,
    'original_icon': None,
    'original_name': 'Night flow',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'night_flow',
    'unique_id': '7384243_20203_1120_night_flow',
    'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
  })
# ---
# name: test_analytics_entities_snapshot[sensor.dom_night_flow-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'volume_flow_rate',
      'friendly_name': 'Dom Night flow',
      'night': None,
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfVolumeFlowRate.LITERS_PER_HOUR: 'L/h'>,
      'verdict': None,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dom_night_flow',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_analytics_entities_snapshot[sensor.dom_usage_forecast-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.dom_usage_forecast',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Usage forecast',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.VOLUME_STORAGE: 'volume_storage'>,
    'original_icon': None,
    'original_name': 'Usage forecast',
    'platform': 'aquahome',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'usage_forecast',
    'unique_id': '7384243_20203_1120_usage_forecast',
    'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
  })
# ---
# name: test_analytics_entities_snapshot[sensor.dom_usage_forecast-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'band_liters': 114,
      'device_class': 'volume_storage',
      'friendly_name': 'Dom Usage forecast',
      'liters': 174,
      'persons': None,
      'source': 'device_average',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
      'weekday': 'wednesday',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.dom_usage_forecast',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '174.128942064',
  })
# ---
